# 22209-Dushin

./: README.md
Java/StackCalculator/: README.md  pom.xml
Java/StackCalculator/src/main/resources/: config
Java/lab0/: pom.xml
Java/lab2-game/src/main/: pom.xml
Java/lab2-game/src/main/java/ru/nsu/dushin/: Bird.java  FlappyBirdGame.java  GameController.java  GameModel.java  GameView.java  ImageManager.java  Pipe.java  RecordManager.java  (+1 more)
Java/lab2-game/src/main/resources/: config
Java/lab3/Cliant/: pom.xml
Java/lab3/MySrever/: pom.xml
Lab0/: CMakeLists.txt  README.md  counter.h  main.cpp
Lab0/includes/: counter.h
Lab0/src/: counter.cpp  main.cpp
lab0/: CMakeLists.txt  README.md  counter.cpp
lab1/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  README.md  documetation.txt  tests.cpp
lab2/: README.md
lab2/GameOfLife/: CMakeLists.txt  Command.h  CommandData.h  CommandLineData.h  Controller.cpp  Controller.h  FileParser.cpp  FileParser.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameData.h  LineParser.cpp  LineParser.h  Point.h  State.h  View.cpp  View.h  main.cpp  tests.cpp
lab2/PLAY/: GAME.cpp
lab2/TESTS/: CMakeLists.txt  game.h
lab3/: README.md  config.h  config_failure.cpp  config_failure.h  converter.h  factory.cpp  factory.h  input_sample_stream.cpp  input_sample_stream.h  main.cpp  mix_converter.cpp  mix_converter.h  mute_converter.cpp  mute_converter.h  output_sample_stream.cpp  output_sample_stream.h  processor.cpp  processor.h  sample_stream.cpp  sample_stream.h  volume_converter.cpp  volume_converter.h  wav_failure.h
(+32 files in other folders)
